Closed
Bug 576175
Opened 15 years ago
Closed 14 years ago
TM: rename js_Unbox{Double,Int32}
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: n.nethercote, Assigned: n.nethercote)
References
Details
(Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
7.12 KB,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
I hate these names. I always have to look at the prototypes to remember what these functions do.
Suggested new names: js_UnboxNumberAsDouble, js_UnboxNumberAsInt32, js_TryUnboxNumberAsInt32.
(js_BoxDouble and js_BoxInt32 are fine as is, however.)
It would also be sensible to add assertions to js_Unbox{Double,Int32} to check that the given jsval really is a number.
![]() |
Assignee | |
Comment 2•14 years ago
|
||
Fatvals landed a while ago.
js_TryUnboxInt32 no longer exists, so this patch just renames js_Unbox{Double,Int32} and adds assertions to them.
Attachment #516777 -
Flags: review?(luke)
![]() |
Assignee | |
Updated•14 years ago
|
Summary: TM: rename js_Unbox{Double,Int32}, js_TryUnboxInt32 → TM: rename js_Unbox{Double,Int32}
![]() |
Assignee | |
Comment 3•14 years ago
|
||
Review ping!
![]() |
||
Comment 4•14 years ago
|
||
Comment on attachment 516777 [details] [diff] [review]
patch (against 63013:17273c2c0eda)
Sorry for the late review; I managed to miss both the request and the ping.
Attachment #516777 -
Flags: review?(luke) → review+
![]() |
Assignee | |
Comment 5•14 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Comment 6•14 years ago
|
||
cdleary-bot mozilla-central merge info:
http://hg.mozilla.org/mozilla-central/rev/ca707cda5df0
Updated•14 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•