Bug 576175 - TM: rename js_Unbox{Double,Int32}.  r=luke.