js/src/jstracer.cpp
@@ -8557,16 +8557,16 @@ TraceRecorder::d2i(LIns* d, bool resultCanBeImpreciseIfFractional)
     }
     if (d->isCall()) {
         const CallInfo* ci = d->callInfo();
-        if (ci == &js_UnboxDouble_ci) {
+        if (ci == &js_UnboxNumberAsDouble_ci) {
 #if JS_BITS_PER_WORD == 32
             LIns *tag_ins = d->callArgN(0);
             LIns *payload_ins = d->callArgN(1);
             LIns* args[] = { payload_ins, tag_ins };
-            return w.call(&js_UnboxInt32_ci, args);
+            return w.call(&js_UnboxNumberAsInt32_ci, args);
 #else
             LIns* val_ins = d->callArgN(0);
             LIns* args[] = { val_ins };
-            return w.call(&js_UnboxInt32_ci, args);
+            return w.call(&js_UnboxNumberAsInt32_ci, args);
 #endif
         }
         if (ci == &js_StringToNumber_ci) {
@@ -9688,7 +9688,7 @@ TraceRecorder::unbox_number_as_double(Address addr, LIns *tag_ins, VMSideExit *e
     guard(true, w.leui(tag_ins, w.nameImmui(JSVAL_UPPER_INCL_TAG_OF_NUMBER_SET)), exit);
     LIns *val_ins = w.ldiValuePayload(addr);
     LIns* args[] = { val_ins, tag_ins };
-    return w.call(&js_UnboxDouble_ci, args);
+    return w.call(&js_UnboxNumberAsDouble_ci, args);
 }
 
 inline LIns*
@@ -9780,7 +9780,7 @@ TraceRecorder::box_value_into(const Value &v, LIns *v_ins, Address addr)
 {
     if (v.isNumber()) {
         JS_ASSERT(v_ins->isD());
-        if (fcallinfo(v_ins) == &js_UnboxDouble_ci) {
+        if (fcallinfo(v_ins) == &js_UnboxNumberAsDouble_ci) {
             w.stiValueTag(v_ins->callArgN(0), addr);
             w.stiValuePayload(v_ins->callArgN(1), addr);
         } else if (IsPromotedInt32(v_ins)) {
@@ -9838,7 +9838,7 @@ TraceRecorder::unbox_number_as_double(LIns *v_ins, VMSideExit *exit)
           w.ltuq(v_ins, w.nameImmq(JSVAL_UPPER_EXCL_SHIFTED_TAG_OF_NUMBER_SET)),
           exit);
     LIns* args[] = { v_ins };
-    return w.call(&js_UnboxDouble_ci, args);
+    return w.call(&js_UnboxNumberAsDouble_ci, args);
 }
 
 inline nanojit::LIns*
@@ -9932,7 +9932,7 @@ TraceRecorder::box_value_for_native_call(const Value &v, LIns *v_ins)
 {
     if (v.isNumber()) {
         JS_ASSERT(v_ins->isD());
-        if (fcallinfo(v_ins) == &js_UnboxDouble_ci)
+        if (fcallinfo(v_ins) == &js_UnboxNumberAsDouble_ci)
             return v_ins->callArgN(0);
         if (IsPromotedInt32(v_ins)) {
             return w.orq(w.ui2uq(w.demoteToInt32(v_ins)),
